# flatWorld

./: .gitignore  CMakeLists.txt  Makefile  README  config.h  main.cpp  phaseOne.cpp  phaseOne.h  phaseThree.cpp  phaseThree.h  phaseTwo.cpp  phaseTwo.h  phaseZero.cpp  phaseZero.h  slowriter.cpp  slowriter.h
win/flatWorld/: .gitignore  flatWorld.sln  flatWorld.vcxproj
